# fast_simulator

./: .travis.yml  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml  setup.py
examples/: example1.py  moving_human.py  moving_humans.py
include/fast_simulator/: Amigo.h  Box.h  Event.h  Joint.h  Kinect.h  LRF.h  ModelParser.h  Object.h  Octree.h  OctreeNode.h  Pera.h  Pico.h  Ray.h  Robot.h  Sensor.h  Sergio.h  Shape.h  Simulator.h  SimulatorROS.h  Sonar.h  Sprite.h  StandaloneKinect.h  StandaloneLRF.h  World.h  simulator.h  util.h
launch/: middleware.launch  start-pico.launch  start.launch  start_pera.launch
scenarios/: cleanup.py  egpsr.py  egpsr.txt  egpsr_tester.py
scripts/: spawn
src/: Amigo.cpp  Box.cpp  Event.cpp  HeightMap.cpp  HeightMapNode.cpp  Joint.cpp  Kinect.cpp  LRF.cpp  ModelParser.cpp  Object.cpp  Octree.cpp  OctreeNode.cpp  Pera.cpp  Pico.cpp  Ray.cpp  Robot.cpp  Sensor.cpp  Sergio.cpp  Shape.cpp  Simulator.cpp  SimulatorROS.cpp  Sonar.cpp  Sprite.cpp  StandaloneKinect.cpp  StandaloneLRF.cpp  World.cpp  amigo_teleporter.cpp  robot_teleporter.cpp  simulator.cpp  util.cpp
src/fast_simulator/: client.py  console.py  interactive.py
srv/: SetObject.srv
test/: heightmap.pgm  test1.yaml
